repos/emily-python/contents/test/export/fail/recursive.em
# Can't load a file while it is initially running
# Expect failure

let y = 3

let z = project.recursive2.y

println z
